chore: add dimmed bg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nomad JS</title>
+    <title>Chrome-App</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
@@ -37,7 +37,9 @@
         <span></span>
       </div>
     </div>
-    <div id="bg"></div>
+    <div id="bg">
+      <div id="dimmed"></div>
+    </div>
     <script src="js/weather.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/background.js"></script>
